--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 astroid==2.1.0
 autopep8==1.4.3
+beautifulsoup4==4.7.1
+bs4==0.0.1
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
@@ -8,4 +10,7 @@ psycopg2-binary==2.7.7
 pycodestyle==2.5.0
 pylint==2.2.2
 six==1.12.0
+soupsieve==1.7.3
+typed-ast==1.3.1
 wrapt==1.11.1
+xlrd==1.1.0
