--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
 astroid==2.1.0
 autopep8==1.4.3
+certifi==2018.11.29
+chardet==3.0.4
+idna==2.8
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+nltk==3.4
 peewee==3.8.2
 psycopg2-binary==2.7.7
 pycodestyle==2.5.0
 pylint==2.2.2
+requests==2.21.0
+singledispatch==3.4.0.3
 six==1.12.0
+textblob==0.15.2
+urllib3==1.24.1
+vaderSentiment==3.2.1
 wrapt==1.11.1
