--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ idna==2.8
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+nltk==3.4
 peewee==3.8.2
 protobuf==3.6.1
 psycopg2-binary==2.7.7
