--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ google-auth==1.6.2
 google-cloud-language==1.1.1
 googleapis-common-protos==1.5.6
 grpcio==1.18.0
+certifi==2018.11.29
+chardet==3.0.4
 idna==2.8
 isort==4.3.4
 lazy-object-proxy==1.3.1
@@ -25,4 +27,10 @@ requests==2.21.0
 rsa==4.0
 six==1.12.0
 urllib3==1.24.1
+requests==2.21.0
+singledispatch==3.4.0.3
+six==1.12.0
+textblob==0.15.2
+urllib3==1.24.1
+vaderSentiment==3.2.1
 wrapt==1.11.1
