--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,48 @@
+appdirs==1.4.3
 astroid==2.1.0
+attrs==19.1.0
 autopep8==1.4.3
-beautifulsoup4==4.7.1
-bs4==0.0.1
+black==18.9b0
+boto==2.49.0
+boto3==1.9.108
+botocore==1.12.108
+bz2file==0.98
+cachetools==3.1.0
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+docutils==0.14
+gensim==3.7.1
+google-api-core==1.7.0
+google-auth==1.6.2
+google-cloud-language==1.1.1
+googleapis-common-protos==1.5.6
+grpcio==1.18.0
+idna==2.8
 isort==4.3.4
+jmespath==0.9.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+nltk==3.4
 numpy==1.16.2
 peewee==3.8.2
+protobuf==3.6.1
 psycopg2-binary==2.7.7
+pyasn1==0.4.5
+pyasn1-modules==0.2.4
 pycodestyle==2.5.0
 pylint==2.2.2
+python-dateutil==2.8.0
+pytz==2018.9
+requests==2.21.0
+rsa==4.0
+s3transfer==0.2.0
+scipy==1.2.1
+singledispatch==3.4.0.3
 six==1.12.0
-soupsieve==1.7.3
-symspellpy==6.3.7
-typed-ast==1.3.1
+smart-open==1.8.0
+textblob==0.15.2
+toml==0.10.0
+urllib3==1.24.1
+vaderSentiment==3.2.1
 wrapt==1.11.1
-xlrd==1.1.0
