--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ appdirs==1.4.3
 astroid==2.1.0
 attrs==19.1.0
 autopep8==1.4.3
+beautifulsoup4==4.7.1
+bs4==0.0.1
 black==18.9b0
 boto==2.49.0
 boto3==1.9.108
@@ -41,8 +43,12 @@ scipy==1.2.1
 singledispatch==3.4.0.3
 six==1.12.0
 smart-open==1.8.0
+soupsieve==1.7.3
+symspellpy==6.3.7
 textblob==0.15.2
 toml==0.10.0
+typed-ast==1.3.1
 urllib3==1.24.1
 vaderSentiment==3.2.1
 wrapt==1.11.1
+xlrd==1.1.0
